--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,10 @@
   "author": "Rodier-joel",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "router": "^1.3.5"
   }
 }
