--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -14,12 +14,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "build:style":"tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "build:style": "tailwind build src/styles/index.css",
     "start": "npm run build:style && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }, 
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
